[metadata]
version = 1.0.7
name = cosmosvalmon
summary = Utility for monitoring Cosmos Validators
description_file = README.md
license = GPL3
classifiers =
	Environment :: Console
	Topic :: Utilities
author =
author_email =
home_page =
package_data=
include_package_data=True,

[files]
packages =

scripts =


[entry_points]

[nosetests]
detailed-errors = 1
with-coverage = 1
cover-package =
cover-erase = 1
verbosity = 2

[extract_messages]
input_dirs =
output_file =
